--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,11 @@
 				<artifactId>jackson-jaxrs</artifactId>
 				<version>1.9.13</version>
 			</dependency>
+			<dependency>
+				<groupId>com.fasterxml.jackson.core</groupId>
+				<artifactId>jackson-databind</artifactId>
+				<version>2.3.3</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
